<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.moviesapp.movies.detail.MovieDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".movies.detail.MovieDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAppBar"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                style="?attr/collapsingToolbarLayoutMediumStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
                app:contentScrim="@color/colorAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="0dp"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:layout_collapseMode="pin"
                    app:title="@string/movie_detail" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movie_backdrop_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/movie_backdrop_default_bg"
                    app:backdropUrl="@{viewModel.movie.backdropPath}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/movie_image"
                    android:layout_width="@dimen/movie_detail_poster_image_width"
                    android:layout_height="@dimen/movie_detail_poster_image_height"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@id/movie_backdrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:posterUrl="@{viewModel.movie.posterPath}"
                    app:shapeAppearance="@style/ShapeAppearance.App.RectImageView"
                    app:srcCompat="@drawable/movie_image_default_bg" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@{viewModel.movie.title}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_backdrop"
                    tools:text="Exciting movie it seems" />


                <LinearLayout
                    android:id="@+id/vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/popularity_section"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <TextView
                        android:id="@+id/vote_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/vote_avg"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                    <TextView
                        android:id="@+id/vote_avg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{viewModel.movie.voteAverage}"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        tools:text="1.111" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/popularity_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/adult_section"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/vote"
                    app:layout_constraintTop_toTopOf="@id/vote">

                    <TextView
                        android:id="@+id/popularity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/popularity"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                    <TextView
                        android:id="@+id/popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{viewModel.movie.popularity}"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        tools:text="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/adult_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/popularity_section"
                    app:layout_constraintTop_toTopOf="@id/vote">

                    <TextView
                        android:id="@+id/adult_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/adult"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                    <TextView
                        android:id="@+id/adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{viewModel.movie.adult}"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        tools:text="Yes" />
                </LinearLayout>

                <TextView
                    android:id="@+id/overview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/overview"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vote" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_label" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sixteen"
                    android:layout_marginTop="@dimen/sixteen"
                    android:layout_marginEnd="@dimen/sixteen"
                    android:text="@{viewModel.movie.overview}"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_label"
                    tools:text="This movie was set in the 1900 when Nigeria first got her independence from the britain" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

